Add cache settings

--- a/mpv.conf
+++ b/mpv.conf
@@ -1,4 +1,4 @@
-############
+#############
 # Subtitles #
 #############
 
@@ -25,3 +25,20 @@ sub-border-size=3.2
 sub-shadow-offset=1
 sub-shadow-color="#33000000"
 sub-spacing=0.5
+
+##################
+# cache settings #
+##################
+
+# Use 150MB input cache for everything, even local files.
+cache=153600
+
+# Disable the behavior that the player will pause if the cache goes below a
+# certain fill size.
+cache-pause=no
+
+# Read ahead about 5 seconds of audio and video packets.
+demuxer-readahead-secs=5.0
+
+# Raise readahead from demuxer-readahead-secs to this value if a cache is active.
+cache-secs=50.0
