update tun2socks service files

--- a/badvpn/tun2socks_10_68_8_103.service
+++ b/badvpn/tun2socks_10_68_8_103.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Start tun2socks
+Description=Start tun2socks_10_68_8_103
 
 [Service]
 ExecStart=badvpn-tun2socks --tundev tun99 --netif-ipaddr 10.0.1.4 --netif-netmask 255.255.255.0 --socks-server-addr 10.68.8.103:1080
